--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/* Global hidden class to hide elements */
+.hidden {
+  display: none !important;
+}
+
 /* Reset & Base Styles */
 * {
   margin: 0;
